projects/examples/source/09.04.cpp
////////////////////////////////////////////////////////////////////////////

#include <cassert>
#include <memory>

////////////////////////////////////////////////////////////////////////////

int main()
{
	std::default_delete < int[] > deleter;

//  ------------------------------------------------------------------------

//  std::shared_ptr < int   > array_1(new int[5]{ 1, 2, 3, 4, 5 }); // error

	std::shared_ptr < int   > array_2(new int[5]{ 1, 2, 3, 4, 5 }, deleter);

	std::shared_ptr < int[] > array_3(new int[5]{ 1, 2, 3, 4, 5 });

//  ------------------------------------------------------------------------

//	assert(array_1[0] == 1); // error

//	assert(array_2[0] == 1); // error

	assert(array_3[0] == 1);

//  ------------------------------------------------------------------------

//	assert(*array_3 == 1 && *(array_3 + 1) == 2); // error
}

////////////////////////////////////////////////////////////////////////////